@@ -5,7 +5,9 @@ require 'yaml'
 Dir["tests/*.yml"].each do |testfile|
     YAML::load_documents( File.open( testfile ) ) do |doc|
         if doc['in'] and doc['out']
-            red = RedCloth.new( doc['in'] )
+            opts = []
+            opts << :hard_breaks if testfile =~ /hard_breaks/
+            red = RedCloth.new( doc['in'], opts )
             html = if testfile =~ /markdown/
                        red.to_html( :markdown )
                    else
